--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,26 +1,77 @@
-name: Deploy to GitHub Pages
+name: Deploy GitHub Finder to GitHub Pages
 
 on:
   push:
     branches:
-      - main # 기본 브랜치명을 사용하세요
+      - main # 또는 master (저장소의 기본 브랜치에 맞게 수정)
+  pull_request:
+    branches:
+      - main
+
+  # 수동으로 워크플로우 실행 허용
+  workflow_dispatch:
+
+# GitHub Pages에 배포하기 위한 권한 설정
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# 동시 배포 방지
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  # 빌드 작업
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source code
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Copy static files to root for GitHub Pages
-        run: |
-          mkdir public
-          cp -r html/* public/
-          cp -r css public/
-          cp -r js public/
+      - name: 🔧 Setup Pages
+        uses: actions/configure-pages@v4
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: 📂 Prepare build directory
+        run: |
+          # public 디렉토리 생성
+          mkdir -p public
+
+          # 현재 구조에 맞게 파일들 복사
+          cp index.html public/
+          cp style.css public/
+          cp app.js public/
+          cp README.md public/
+
+          # 추가 파일들이 있다면 복사 (선택사항)
+          if [ -f favicon.ico ]; then cp favicon.ico public/; fi
+          if [ -d images ]; then cp -r images public/; fi
+          if [ -d assets ]; then cp -r assets public/; fi
+
+      - name: 📋 List build files
+        run: |
+          echo "🗂️ Build directory contents:"
+          ls -la public/
+
+      - name: 📤 Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          path: "./public"
+
+  # 배포 작업
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: 🚀 Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+      - name: ✅ Deployment complete
+        run: |
+          echo "🎉 GitHub Finder has been successfully deployed!"
+          echo "📍 Site URL: ${{ steps.deployment.outputs.page_url }}"
