hotfix: 폴더구조 개선

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -131,7 +131,7 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
-      - name: ✅ Success notification
+      - name: ✅ Success notifications
         run: |
           echo ""
           echo "🎉 Deployment successful!"
